Fixed test for GH CI and added routes for admin stats and logged in user profile information
